# AdvancedCpp

./: .gitignore
Assignments/Assignment1/: 10_1.cpp  10_2.cpp  10_3.cpp  CMakeLists.txt  main.cpp
Assignments/Assignment2/: 11_1.cpp  11_2.cpp  11_3.cpp  CMakeLists.txt
Assignments/Assignment2/include/: Tuple.h
Assignments/Assignment3/: 12_1.cpp  12_2.cpp  12_3.cpp  12_4.cpp  CMakeLists.txt
Assignments/Assignment3/include/: factory.h
Assignments/Assignment4/: 14_1.cpp  14_2.cpp  14_3.cpp  CMakeLists.txt
Assignments/Assignment4/include/: my_promise.h
Assignments/Assignment5/: 15_1.cpp  CMakeLists.txt
Assignments/Assignment6/: .gitignore  CMakeLists.txt
Assignments/Assignment6/include/: variadic_examples.h
Assignments/Assignment7/: 17_1_2_3.cpp  CMakeLists.txt
Lectures Code/Lecture 1/: CMakeLists.txt  IndentStream.cpp  IndentStream.h  TestIndentStream.cpp  Tuple.cpp  Tuple.h  regex_hw.cpp  variadic_examples.cpp  wind.cpp
Lectures Code/Lecture 2/lec_12_files/: CMakeLists.txt  Tuple.cpp  Tuple.h  optimized_copy.h  variadic_examples.cpp  variadic_examples.h
